syntax = "proto3";

option go_package = "github.com/bennycio/bundle/api";

package api;


// USERS ------------------------------------------------------------------ ||

service UsersService {
    rpc GetUser (GetUserRequest) returns (User){}
    rpc InsertUser (User) returns (Empty) {}
    rpc UpdateUser (UpdateUserRequest) returns (Empty) {}
}


message GetUserRequest {
    string username = 1;
    string email = 2;
}

message UpdateUserRequest {
    string username = 1;
    User updatedUser = 2;
}

message User {
    string username = 1;
    string email = 2;
    string password = 3;
    repeated string scopes = 4;
    repeated string plugins = 5;
    string tag = 6;
}

// PLUGINS --------------------------------------------------------------------- ||

service PluginsService {
    rpc GetPlugin (GetPluginRequest) returns (Plugin){}
    rpc InsertPlugin (Plugin) returns (Empty) {}
    rpc UpdatePlugin (UpdatePluginRequest) returns (Empty) {}
    rpc PaginatePlugins (PaginatePluginsRequest) returns (PaginatePluginsResponse) {}
}


message GetPluginRequest {
    string name = 1;
}


message UpdatePluginRequest {
    string name = 1;
    Plugin updatedPlugin = 2;
}

message PaginatePluginsRequest {
    int32 page = 1;
}

message PaginatePluginsResponse {
    repeated Plugin plugins = 1;
}

message Plugin {
    string name = 1;
    string author = 2;
    string version = 3;
    string description = 4;
    int64 lastUpdated = 8;
}



// UTIL ----------------------------------------------------------------- ||


message Empty {
}


